--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "^19.2.8",
     "@angular/router": "^19.2.8",
     "@tailwindcss/postcss": "^4.0.3",
+    "chart.js": "^4.4.9",
+    "ng2-charts": "^8.0.0",
     "ngx-editor": "^19.0.0-beta.1",
     "postcss": "^8.5.1",
     "rxjs": "~7.8.0",
